--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -74,18 +74,18 @@ web_modules/
 
 # dotenv environment variable files
 #.env
-.env.development.local
+#.env.development.local
 .env.development
-.env.test.local
+#.env.test.local
 .env.test
-.env.production.local
-.env.local
+#.env.production.local
+#.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
 
-# Next.js build output
+# Next.js build output#S
 .next
 out
 
