--- a/backend/.env
+++ b/backend/.env
@@ -5,5 +5,6 @@ POSTGRES_PORT=5432
 POSTGRES_DATABASE=afesta
 
 JWT_SECRET=top_secret
+PORT=4000
 
 DATABASE_URL=postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public
