--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,6 @@ jobs:
             - name: Run Docker Compose Down
               run: docker compose down
             - name: Delete react docker volume
-              run: if docker volume ls --quiet --filter name=afesta_react-volume | grep -q.; then docker volume rm
+              run: if docker volume ls --quiet --filter name=afestas_react-volume | grep -q.; then docker volume rm afestas_react-volume; fi
             - name: Run Docker Compose Up and Build
               run: docker compose up --build -d
