--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
         steps:
             - name: Check out repository code
               uses: actions/checkout@v3
-            - name: Make a new envfile
+            - name: create back-end env file
               uses: SpicyPizza/create-envfile@v1.3.1
               with:
                 envkey_PORT: ${{secrets.PORT}}
