--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,13 @@ jobs:
             - name: create back-end env file
               uses: SpicyPizza/create-envfile@v1.3.1
               with:
-                envkey_PORT: ${{secrets.PORT}}
-                envkey_POSTGRES_USER: ${{secrets.POSTGRES_USER}}
-                envkey_POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
-                envkey_POSTGRES_DB: ${{secrets.POSTGRES_DB}}
-                envkey_DATABASE_URL: ${{secrets.DATABASE_URL}}
+                envkey_PORT: 4000          
+                envkey_DATABASE_URL: "postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public"
+                envkey_POSTGRES_USERNAME: "postgres"
+                envkey_POSTGRES_PASSWORD: "postgres"
+                envkey_POSTGRES_HOST: "postgres"
+                envkey_POSTGRES_PORT: 5432
+                envkey_POSTGRES_DATABASE: "afesta"
                 directory: back-end
                 file_name: .env
                 fail_on_empty: true
