--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ jobs:
         steps:
             - name: Check out repository code
               uses: actions/checkout@v3
+              
             - name: create back-end env file
               uses: SpicyPizza/create-envfile@v1.3.1
               with:
@@ -23,6 +24,7 @@ jobs:
                 directory: back-end
                 file_name: .env
                 fail_on_empty: true
+
             - name: Create front-end envfile
               uses: SpicyPizza/create-envfile@v1.3.1
               with:
@@ -30,9 +32,12 @@ jobs:
                 directory: front-end
                 file_name: .env
                 fail_on_empty: true
+
             - name: Run Docker Compose Down
               run: docker compose down
+
             - name: Delete react docker volume
-              run: if docker volume ls --quiet --filter name=afesta_react-volume | grep -q.; then docker volume rm
+              run: if docker volume ls --quiet --filter name=afesta_react-volume | grep -q.; then docker volume rm afestas_react-volume; fi
+
             - name: Run Docker Compose Up and Build
               run: docker compose up --build -d
