--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
               uses: SpicyPizza/create-envfile@v1.3.1
               with:
                 envkey_PORT: 4000          
-                envkey_DATABASE_URL: "postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public"
+                envkey_DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/afesta?schema=public"
                 envkey_POSTGRES_USERNAME: "postgres"
                 envkey_POSTGRES_PASSWORD: "postgres"
                 envkey_POSTGRES_HOST: "postgres"
