--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
               uses: actions/checkout@v3
               
             - name: create back-end env file
-              uses: SpicyPizza/create-envfile@v1.3.1
+              uses: SpicyPizza/create-envfile@v1.3
               with:
                 envkey_PORT: 4000          
                 envkey_DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/afesta?schema=public"
@@ -26,9 +26,9 @@ jobs:
                 fail_on_empty: true
 
             - name: Create front-end envfile
-              uses: SpicyPizza/create-envfile@v1.3.1
+              uses: SpicyPizza/create-envfile@v1.3
               with:
-                envkey_REACT_APP_BACK_END_URL: ${{secrets.REACT_APP_BACK_END_URL}}
+                envkey_REACT_APP_BACK_END_URL: "http://54.211.125.162"
                 directory: front-end
                 file_name: .env
                 fail_on_empty: true
