--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
                 envkey_POSTGRES_HOST: "postgres"
                 envkey_POSTGRES_PORT: 5432
                 envkey_POSTGRES_DATABASE: "afesta"
-                directory: back-end
+                directory: backend
                 file_name: .env
                 fail_on_empty: true
 
@@ -29,7 +29,7 @@ jobs:
               uses: SpicyPizza/create-envfile@v1.3
               with:
                 envkey_REACT_APP_BACK_END_URL: "http://54.211.125.162"
-                directory: front-end
+                directory: frontend
                 file_name: .env
                 fail_on_empty: true
 
