--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,13 +14,13 @@ jobs:
             - name: create back-end env file
               uses: SpicyPizza/create-envfile@v1.3
               with:
-                envkey_PORT: 4000          
-                envkey_DATABASE_URL: "postgresql://postgres:postgres@postgres:5432/afesta?schema=public"
-                envkey_POSTGRES_USERNAME: "postgres"
-                envkey_POSTGRES_PASSWORD: "postgres"
-                envkey_POSTGRES_HOST: "postgres"
+                envkey_PORT: ${{secrets.PORT}}         
+                envkey_DATABASE_URL: ${{secrets.DATABASE_URL}}
+                envkey_POSTGRES_USERNAME: ${{secrets.POSTGRES_USER}}
+                envkey_POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
+                envkey_POSTGRES_HOST: ${{secrets.POSTGRES_PASSWORD}}
                 envkey_POSTGRES_PORT: 5432
-                envkey_POSTGRES_DATABASE: "afesta"
+                envkey_POSTGRES_DATABASE: ${{secrets.POSTGRES_DB}}
                 directory: backend
                 file_name: .env
                 fail_on_empty: true
@@ -28,7 +28,7 @@ jobs:
             - name: Create front-end envfile
               uses: SpicyPizza/create-envfile@v1.3
               with:
-                envkey_REACT_APP_BACK_END_URL: "http://54.211.125.162"
+                envkey_REACT_APP_BACK_END_URL: ${{secrets.REACT_APP_BACK_END_URL}}
                 directory: frontend
                 file_name: .env
                 fail_on_empty: true
