--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
             - name: Create front-end envfile
               uses: SpicyPizza/create-envfile@v1.3
               with:
-                envkey_REACT_APP_BACK_END_URL: ${{secrets.REACT_APP_BACK_END_URL}}
+                VITE_REACTAPP_BACKEND_URL: ${{secrets.VITE_REACTAPP_BACKEND_URL}}
                 directory: frontend
                 file_name: .env
                 fail_on_empty: true
