--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
                 fail_on_empty: true
 
             - name: Run Docker Compose Down
-              run: docker compose down
+              run: docker compose down -v
 
             - name: Delete react docker volume
               run: if docker volume ls --quiet --filter name=afestas_react-data | grep -q.; then docker volume rm afestas_react-data; fi
