--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,31 @@
-name: Build and Deploy on AWS
 on:
-    push:
-        branches:
-            - main
+  push:
+    branches:
+      - main
+name: Build and Deploy on AWS
 jobs:
     build:
         runs-on: self-hosted
         timeout-minutes: 10
-        steps:
-            - name: Check out repository code
+        steps:        
+            - name: Checkout
               uses: actions/checkout@v3
-              
-            - name: create back-end env file
-              uses: SpicyPizza/create-envfile@v1.3
-              with:       
+
+            - name: Create back-end env file
+              uses: SpicyPizza/create-envfile@v1.3.1
+
+              with:
+                envkey_PORT: ${{secrets.PORT}}
                 envkey_DATABASE_URL: ${{secrets.DATABASE_URL}}
-                directory: backend
+                envkey_POSTGRES_USERNAME: ${{secrets.POSTGRES_USERNAME}}
+                envkey_POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
+                envkey_POSTGRES_DB: ${{secrets.POSTGRES_DB}}
+                directory: backend/
                 file_name: .env
                 fail_on_empty: true
 
-            - name: Create front-end envfile
-              uses: SpicyPizza/create-envfile@v1.3
+            - name: Create front-end env file
+              uses: SpicyPizza/create-envfile@v1.3.1
               with:
                 VITE_REACTAPP_BACKEND_URL: ${{secrets.VITE_REACTAPP_BACKEND_URL}}
                 directory: frontend
