--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,10 @@ services:
     env_file:
       - backend/.env
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - postgres-volume:/var/lib/postgresql/data
 
   api:
     container_name: api
-    restart: always
     build: ./backend
     ports:
       - 4000:4000
@@ -49,6 +48,6 @@ services:
     - openssl
 
 volumes:
-  postgres-data:
+  postgres-volume:
   react-volume:
   ssl-certs:
