--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,39 +4,40 @@ on:
       - main
 name: Build and Deploy on AWS
 jobs:
-    build:
-        runs-on: self-hosted
-        timeout-minutes: 10
-        steps:        
-            - name: Checkout
-              uses: actions/checkout@v3
+  build:
+    runs-on: self-hosted
+    timeout-minutes: 10
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-            - name: Create back-end env file
-              uses: SpicyPizza/create-envfile@v1.3.1
+      - name: Create back-end env file
+        uses: SpicyPizza/create-envfile@v1.3.1
 
-              with:
-                envkey_PORT: ${{secrets.PORT}}
-                envkey_DATABASE_URL: ${{secrets.DATABASE_URL}}
-                envkey_POSTGRES_USERNAME: ${{secrets.POSTGRES_USERNAME}}
-                envkey_POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
-                envkey_POSTGRES_DB: ${{secrets.POSTGRES_DB}}
-                directory: backend
-                file_name: .env
-                fail_on_empty: true
+        with:
+          envkey_PORT: ${{secrets.PORT}}
+          envkey_POSTGRES_USERNAME: ${{secrets.POSTGRES_USERNAME}}
+          envkey_POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
+          envkey_POSTGRES_DB: ${{secrets.POSTGRES_DB}}
+          envkey_POSTGRES_PORT: ${{secrets.POSTGRES_PORT}}
+          envkey_DATABASE_URL: ${{secrets.DATABASE_URL}}
+          directory: backend
+          file_name: .env
+          fail_on_empty: true
 
-            - name: Create front-end env file
-              uses: SpicyPizza/create-envfile@v1.3.1
-              with:
-                VITE_REACTAPP_BACKEND_URL: ${{secrets.VITE_REACTAPP_BACKEND_URL}}
-                directory: frontend
-                file_name: .env
-                fail_on_empty: true
+      - name: Create front-end env file
+        uses: SpicyPizza/create-envfile@v1.3.1
+        with:
+          VITE_REACTAPP_BACKEND_URL: ${{secrets.VITE_REACTAPP_BACKEND_URL}}
+          directory: frontend
+          file_name: .env
+          fail_on_empty: true
 
-            - name: Run Docker Compose Down
-              run: docker compose down -v
+      - name: Run Docker Compose Down
+        run: docker compose down -v
 
-            - name: Delete react docker volume
-              run: if docker volume ls --quiet --filter name=afestas_react-volume | grep -q .; then docker volume rm afestas_react-volume; fi
+      - name: Delete react docker volume
+        run: if docker volume ls --quiet --filter name=afestas_react-volume | grep -q .; then docker volume rm afestas_react-volume; fi
 
-            - name: Run Docker Compose Up and Build
-              run: docker compose up --build -d
+      - name: Run Docker Compose Up and Build
+        run: docker compose up --build -d
