--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,13 +9,13 @@ jobs:
       - name: Make a new envfile
         uses: SpicyPizza/create-envfile@v1.3
         with:
-          envkey_PORT: 4000          
-          envkey_DATABASE_URL: "postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public"
+          envkey_PORT: 4000 
           envkey_POSTGRES_USERNAME: "postgres"
           envkey_POSTGRES_PASSWORD: "postgres"
           envkey_POSTGRES_HOST: "postgres"
           envkey_POSTGRES_PORT: 5432
-          envkey_POSTGRES_DATABASE: "afesta"
+          envkey_POSTGRES_DATABASE: "afesta_test"
+          envkey_DATABASE_URL: "postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public"
           directory: backend
           file_name: .env.test
           fail_on_empty: true
