--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -73,13 +73,13 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-#.env
-#.env.development.local
+.env
+.env.development.local
 .env.development
-#.env.test.local
+.env.test.local
 .env.test
-#.env.production.local
-#.env.local
+.env.production.local
+.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
