--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,8 @@
-POSTGRES_USERNAME=
-POSTGRES_PASSWORD=
-POSTGRES_HOST=
-POSTGRES_PORT=
-POSTGRES_DATABASE=
-
-JWT_SECRET=
-
-DATABASE_URL=postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=afesta
+#---------------------------------------------------------------------------------------
+JWT_SECRET=top_secret
+#---------------------------------------------------------------------------------------
+PORT=4000
+DATABASE_URL=postgresql://postgres:postgres@postgres:5432/afesta?schema=public
